<resources>
    <string name="app_name">AndroidPratice</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_info">Welcome to login</string>
    <string name="info_password_input">请输入密码</string>
    <string name="LoginName">Name</string>
    <string name="InfoNameInput">请输入用户名</string>
    <string name="chkLogin">下次自动登录</string>
    <string name="rbtnLogin1">二维码登录</string>
    <string name="rbtnLogin2">邮箱账号登录</string>
    <string name="btnLogin">登录</string>
    <string name="btnExit">退出</string>
    <string name="mybtn">我的按钮超逊的</string>
</resources>